# cppyy_hello_world

./: CMakeLists.txt  LICENSE  README.md
py/: hello.py
src/: hello.cpp  hello.hpp
